         In general, write down the specifications of the new Offline Scraper database and
         have a look at NOTES.md for guidelines. Create the XML databases to be merged with the
         No-Intro/Redump DATs, also giving support to Extra ROMs (hacks, etc.).


[B]Advanced Emulator Launcher | version 0.9.9 | xx March 2020[/B]

WIP      [SCRAPERS] Add a delay to ScreenScraper scraper to avoid overloading.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2923181#pid2923181

WIP      [SCRAPERS] Store when there is a bad JSON from the scrapers for further
         analysis.

FEATURE  [CORE] New Utility "Check Launcher ROMs sync status"

WIP      [CORE] New Utility "Check ROMs artwork image integrity"
         Sometimes the scrapers download wrong/corrupt data, or produce 0 sized files
         if a file is open() and there is an exception. Sometimes a JPG image is renamed
         as PNG, etc. Check that all artwork have correct file extensions, etc.

WIP      [CORE] New Utility "Delete ROMs redundant artwork"
         Redundant artwork is orphaned artwork.

FEATURE  [CORE] Extra ROMs directory. Extra ROMs are not audited. The extra ROMs directory
         is intended for ROM translations and hacks that should not be taken into account
         in the ROM audit.

FEATURE  [CORE] New Utility "Show detected No-Intro/Redump DATs"
         This utility shows the automatically detected No-Intro/Redump DATs.
         Create addon settings for the No-Intro DAT directory and the Redump DAT directory.

FEATURE  [CORE] New Utility "Check Retroarch Launchers" This utility checks all Retroarch
         launchers to verify if the core set with -L exists.

FEATURE  [CORE] Remove the LAUNCHER_DMODE_1G1R Launcher display mode. The Launcher display
         modes will be LAUNCHER_DMODE_FLAT and LAUNCHER_DMODE_PCLONE, like AML.

FEATURE  [ROM AUDIT] Current way of doing the ROM audit is inconvenient. User has to set a DAT