@@ -143,11 +143,15 @@ WIP      [SCRAPERS] Change the Offline Scraper format from XML to JSON. Include 
 
 [B]Advanced Emulator Launcher | version 0.9.9 | xx March 2020[/B]
 
+WIP      [CORE] Rename offline scraper images to use new platform name.
+
+WIP      [CORE] Update the platform icons. Github issue #112.
+
 WIP      [SCRAPERS] Add a delay to ScreenScraper scraper to avoid overloading.
          See https://forum.kodi.tv/showthread.php?tid=287826&pid=2923181#pid2923181
 
-WIP      [SCRAPERS] Store when there is a bad JSON from the scrapers for further
-         analysis.
+FEATURE  [SCRAPERS] Store when there is a bad JSON from the scrapers for further
+         analysis. Working for ScreenScraper scraper.
 
 FEATURE  [CORE] New Utility "Check Launcher ROMs sync status"
 
@@ -202,6 +206,8 @@ FIX      Fix crash when using "Export ROM metadata to NFO files"
 
 FIX      TheGamesDB URL API has changed. Verify that the scraper is working OK. Github issue #109.
          See https://forums.thegamesdb.net/viewtopic.php?f=5&p=2228
+
+FIX      ScreenScraper crashes for aliased platforms. Github issue #113.
 
 
 [B]Advanced Emulator Launcher | version 0.9.8 | 16 September 2019[/B]
